<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_gradient_bg"
    android:gravity="center"
    android:orientation="vertical">

    <!--按键-->
    <LinearLayout
        android:id="@+id/base_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/base_resid"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_demo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_05"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_05"
            android:background="@drawable/base_button_selector"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10"
            android:text="@string/title_demo"
            android:textSize="@dimen/textsize_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_iso6c"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_05"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_05"
            android:background="@drawable/base_button_selector"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10"
            android:text="@string/title_6c"
            android:textSize="@dimen/textsize_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_basepara"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_05"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_05"
            android:background="@drawable/base_button_selector"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10"
            android:text="@string/title_base"
            android:textSize="@dimen/textsize_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_seniorpara"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_05"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_05"
            android:background="@drawable/base_button_selector"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10"
            android:text="@string/title_senior"
            android:textSize="@dimen/textsize_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_test"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_20"
            android:background="@drawable/base_button_selector"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10"
            android:text="@string/title_test"
            android:textSize="@dimen/textsize_20"
            android:textStyle="bold" />


    </LinearLayout>

    <!--通讯信息显示-->
    <LinearLayout
        android:id="@+id/base_resid"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_05">

        <TextView
            android:id="@+id/base_res_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:padding="@dimen/padding_05"
            android:textSize="@dimen/textsize_12"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
    </LinearLayout>

</RelativeLayout>