<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_gradient_bg"
    android:gravity="center"
    android:orientation="vertical">

    <!--按键-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!--COMMPORT-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_05"
            android:layout_marginRight="@dimen/margin_40"
            android:layout_marginBottom="@dimen/margin_05"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_10"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_10"
                android:text="@string/com_port"
                android:textSize="@dimen/textsize_12"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Spinner
                android:id="@+id/connect_rs232_comport_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerStyle="@android:style/Widget.Spinner.DropDown" />
        </LinearLayout>

        <!--BAUDRATE-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_05"
            android:layout_marginRight="@dimen/margin_40"
            android:layout_marginBottom="@dimen/margin_05"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_10"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_10"
                android:text="@string/baud_rate"
                android:textSize="@dimen/textsize_12"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Spinner
                android:id="@+id/connect_rs232_baudrate_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/baud_rate"
                android:spinnerStyle="@android:style/Widget.Spinner.DropDown" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_connect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_05"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_05"
            android:background="@drawable/base_button_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10"
            android:text="@string/connect"
            android:textSize="@dimen/textsize_20"
            android:textStyle="bold" />

    </LinearLayout>

    <!--通讯信息显示-->
    <LinearLayout
        android:id="@+id/base_resid"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_05">

        <TextView
            android:id="@+id/base_res_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/padding_05"
            android:textSize="@dimen/textsize_12"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
    </LinearLayout>

</RelativeLayout>
